--- a/src/pages/nuova-bolletta/nuova-bolletta.html
+++ b/src/pages/nuova-bolletta/nuova-bolletta.html
@@ -27,7 +27,7 @@
 		</ion-item>
 		<ion-item>
 			<ion-label fixed>Scadenza</ion-label>
-			<ion-datetime displayFormat="DD/MM/YYYY" [(ngModel)]="scadenza"></ion-datetime>
+			<ion-datetime displayFormat="DD/MMMM/YYYY" [(ngModel)]="scadenza"></ion-datetime>
 		</ion-item>
 		<ion-item>
 			<ion-label fixed>Pagata</ion-label>
