--- a/src/pages/bolletta/bolletta.html
+++ b/src/pages/bolletta/bolletta.html
@@ -1,16 +1,35 @@
 <ion-header>
 	<ion-navbar color="primary">
 		<ion-title>Bolletta</ion-title>
-		<ion-buttons end>
-			<button (click)="dismiss()" ion-button icon-only class="close">
-				<ion-icon name="close"></ion-icon>
-			</button>
-		</ion-buttons>
 	</ion-navbar>
 </ion-header>
 
 <ion-content padding>
-	<h2>{{ bolletta.utenza }}</h2>
-	<h3>Scadenza: {{ bolletta.scadenza }}</h3>
-	<h3>Importo: {{ bolletta.importo }}</h3>
+	<ion-card>
+		<ion-list>
+			<ion-item>
+				<ion-icon name="{{ bolletta.icona }}" item-start></ion-icon>
+				<h2>{{ bolletta.utenza }}</h2>
+			</ion-item>
+			<ion-item>
+				<ion-icon name="logo-euro" item-start></ion-icon>
+				<h3>Importo: {{ bolletta.importo }}</h3>
+			</ion-item>
+			<ion-item>
+				<ion-icon name="calendar" item-start></ion-icon>
+				<h3>Scadenza: {{ bolletta.scadenza }}</h3>
+			</ion-item>
+			<ion-item *ngIf="bolletta.pagata" color="light">
+				<ion-icon name="checkmark" item-start></ion-icon>
+				<h2>{{ bolletta.dataPagamento }}</h2>
+			</ion-item>
+			<ion-item *ngIf="bolletta.pagata" color="secondary">
+				<ion-icon name="checkmark-circle-outline" item-start></ion-icon>
+				<h2 class="pay-text" color="secondary">PAGATA</h2>
+			</ion-item>
+		</ion-list>
+	</ion-card>
+	<ion-fab center bottom *ngIf="!bolletta.pagata">
+		<button ion-fab color="secondary"><ion-icon name="checkmark"></ion-icon></button>
+	</ion-fab>
 </ion-content>
