--- a/src/pages/bolletta/bolletta.html
+++ b/src/pages/bolletta/bolletta.html
@@ -5,27 +5,27 @@
 </ion-header>
 
 <ion-content padding>
+	<!-- <ion-icon name="{{ bolletta.icona }}" item-start large></ion-icon> -->
 	<ion-card>
+		<ion-card-header>
+			<h1><ion-icon name="{{ bolletta.icona }}"></ion-icon> {{ bolletta.utenza.toUpperCase() }}</h1>
+		</ion-card-header>
 		<ion-list>
-			<ion-item>
-				<ion-icon name="{{ bolletta.icona }}" item-start large></ion-icon>
-				<h1 class="utenza">{{ bolletta.utenza.toUpperCase() }}</h1>
-			</ion-item>
-			<ion-item>
+			<ion-item class="importo">
 				<ion-icon name="logo-euro" item-start></ion-icon>
-				<h2>{{ bolletta.importo }}</h2>
+				<h1>{{ bolletta.importo }}</h1>
 			</ion-item>
-			<ion-item>
+			<ion-item class="scadenza">
 				<ion-icon name="calendar" item-start></ion-icon>
 				<h2>{{ bolletta.scadenza }}</h2>
 			</ion-item>
-			<ion-item *ngIf="bolletta.pagata" color="lightPrimary">
+			<ion-item class="dataPagamento" *ngIf="bolletta.pagata" color="lightPrimary">
 				<ion-icon name="checkmark" item-start></ion-icon>
 				<h2 class="pay-date">{{ bolletta.dataPagamento }}</h2>
 			</ion-item>
 			<ion-item *ngIf="bolletta.pagata" color="primary">
-				<ion-icon name="checkmark-circle-outline" item-start></ion-icon>
-				<h2 class="pay-text" color="light">PAGATA</h2>
+				<ion-icon name="checkmark-circle-outline" color="light" item-start></ion-icon>
+				<h1 class="pay-text" color="light">PAGATA</h1>
 			</ion-item>
 		</ion-list>
 	</ion-card>
