--- a/src/pages/nuova-bolletta/nuova-bolletta.html
+++ b/src/pages/nuova-bolletta/nuova-bolletta.html
@@ -55,5 +55,5 @@
 			<ion-datetime displayFormat="DD MMMM YYYY" [(ngModel)]="dataPagamento" doneText="conferma" cancelText="cancella" monthNames="gennaio, febbraio, marzo, aprile, maggio, giugno, luglio, agosto, settembre, ottobre, novembre, dicembre"></ion-datetime>
 		</ion-item>
 	</ion-list>
-	<button ion-button full (click)="addBolletta()" color="secondary">Aggiungi</button>
+	<button ion-button full large (click)="addBolletta()" color="secondary">Aggiungi</button>
 </ion-content>
