Aggiunta Storico bollette con grafici
Ultimo update prima di aspettare che i dati aumentino.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -40,7 +40,7 @@
 			</ion-item-options>
 		</ion-item-sliding>
 		<ion-item>
-			<div class="totale">€ {{ totale.toFixed(2) }}</div> <!-- NOVITAAAAAAAAAAAA -->
+			<div class="totale">€ {{ totale.toFixed(2) }}</div>
 			<h1 class="totale-text" color="light">TOTALE</h1>
 		</ion-item>
 	</ion-list>
