--- a/src/pages/storico/storico.html
+++ b/src/pages/storico/storico.html
@@ -47,7 +47,7 @@
 </ion-content>
 
 <ion-footer>
-	<ion-toolbar color="primary">
+	<ion-toolbar color="secondary">
 		<ion-segment [(ngModel)]="show" (ionChange)="segmentChanged($event)">
 			<ion-segment-button value="tutte">
 				<ion-icon name="apps" color="light"></ion-icon>
