--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -9,21 +9,24 @@
 		</ion-row>
 	</ion-grid>
 	<div class="form">
-		<form [formGroup]="user" (ngSubmit)="signin()">
+		<form [formGroup]="user" (ngSubmit)="login()">
 			<ion-list>
 				<ion-item>
-					<ion-label color="primary" floating>Email</ion-label>
-					<ion-input formControlName="email" type="text"></ion-input>
+					<ion-label floating>Email</ion-label>
+					<ion-input formControlName="email" type="email"></ion-input>
 				</ion-item>
 				<ion-item>
-					<ion-label color="primary" floating>Password</ion-label>
+					<ion-label floating>Password</ion-label>
 					<ion-input formControlName="password" type="password"></ion-input>
 				</ion-item>
 			</ion-list>
-			<button ion-button block type="submit">Login</button>
+			<button ion-button block type="submit">LOG IN</button>
 		</form>
-		<button ion-button block icon-left class="btn-google" color="secondary" (click)="loginGoogle()">
-			<ion-icon name="logo-google"></ion-icon>Google
+		<button ion-button block outline icon-left class="btn-signup" (click)="signup()">
+			<ion-icon name="person-add"></ion-icon>SIGN UP
+		</button>
+		<button ion-button block icon-left class="btn-google" color="secondary" (click)="logInWithGoogle()">
+			<ion-icon name="logo-google"></ion-icon>GOOGLE
 		</button>
 	</div>
 </ion-content>
