--- a/src/pages/storico/storico.html
+++ b/src/pages/storico/storico.html
@@ -5,7 +5,7 @@
 		</button>
 		<ion-title>Archivio</ion-title>
 		<ion-buttons end>
-			<button ion-button icon-only (click)="presentPopover($event)">
+			<button ion-button class="right" icon-only (click)="presentPopover($event)">
 				<ion-icon name="funnel"></ion-icon>
 			</button>
 		</ion-buttons>
